--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "telegram-events-bot1",
+  "name": "distributed-events-server",
   "version": "1.0.0",
-  "description": "Telegram bot for real-time events broadcasting",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ws": "^8.14.2",
-    "node-telegram-bot-api": "^0.64.0",
+    "ws": "^8.14.0", 
+    "node-telegram-bot-api": "^0.63.0",
     "cors": "^2.8.5",
-    "sqlite3": "^5.1.6"
+    "pg": "^8.11.0",
+    "ioredis": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
