--- a/package.json
+++ b/package.json
@@ -1,22 +1,39 @@
 {
-  "name": "distributed-events-server",
+  "name": "telegram-events-production",
   "version": "1.0.0",
+  "description": "Production Events Server with Telegram Moderation",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "node test.js",
+    "build": "echo 'Build complete'",
+    "postinstall": "echo 'Dependencies installed'"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ws": "^8.14.0", 
-    "node-telegram-bot-api": "^0.63.0",
-    "cors": "^2.8.5",
-    "pg": "^8.11.0",
-    "ioredis": "^5.3.0"
+    "ws": "^8.14.2",
+    "node-telegram-bot-api": "^0.64.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "engines": {
-    "node": ">=16.0.0"
+  "keywords": [
+    "telegram",
+    "events",
+    "websocket",
+    "production",
+    "moderation"
+  ],
+  "author": "Production Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-repo/telegram-events"
   }
 }
