--- a/package.json
+++ b/package.json
@@ -1,16 +1,36 @@
 {
-  "name": "distributed-events-server",
+  "name": "events-posts-server",
   "version": "1.0.0",
+  "description": "Events Platform - Posts Management Server",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"No tests specified\" && exit 0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ws": "^8.14.0", 
-    "node-telegram-bot-api": "^0.63.0",
     "cors": "^2.8.5",
-    "pg": "^8.11.0",
-    "ioredis": "^5.3.0"
+    "pg": "^8.11.3",
+    "ws": "^8.14.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "keywords": [
+    "telegram",
+    "mini-app",
+    "events",
+    "posts",
+    "api"
+  ],
+  "author": "Events Platform",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/events-posts-server.git"
   }
 }
