--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,20 @@
-aiogram==3.15.0
-python-dotenv==1.0.0
-aiosqlite==0.20.0
-asyncpg==0.30.0
-asyncio
+# Core dependencies
+aiogram==3.4.1
+aiohttp==3.9.3
+asyncpg==0.29.0
+redis[hiredis]==5.0.1
+pydantic==2.5.3
+
+# Production optimizations
+uvloop==0.19.0
+cchardet==2.1.7
+aiodns==3.1.1
+
+# Monitoring & logging
+structlog==23.2.0
+
+# Security
+cryptography==41.0.8
+
+# Utils
+python-dateutil==2.8.2
