--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ uvloop==0.19.0
 cchardet==2.1.7
 aiodns==3.1.1
 
-# Security
-cryptography==41.0.8
+# Security (обновлена версия)
+cryptography>=42.0.0
 
 # Utils
 python-dateutil==2.8.2
